chandeliers-lus/tests/compile_fail/ui/tc/poly/shadow.stderr
error: Malformed attribute generic: This generic parameter would override the builtin type int
 --> tests/compile_fail/ui/tc/poly/shadow.rs:3:5
  |
3 |     #[generic[int]]
  |     ^^^^^^^^^^^^^^^
  |
  = note: Use a type variable that does not conflict with existing names
